--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -14,6 +14,25 @@
 			<trans-unit id="tx_auth0_backend_layout_wizard_label">
 				<source>Auth0</source>
 			</trans-unit>
+
+			<trans-unit id="form.login.typo3">
+				<source>Login to TYPO3</source>
+			</trans-unit>
+			<trans-unit id="form.logout.auth0">
+				<source>Logout from Auth0</source>
+			</trans-unit>
+			<trans-unit id="form.login.auth0">
+				<source>Login to Auth0</source>
+			</trans-unit>
+			<trans-unit id="form.no-application">
+				<source>Please choose an application, which should be used for login to TYPO3.</source>
+			</trans-unit>
+			<trans-unit id="form.logged-in-as">
+				<source>You are currently logged in to Auth0 as:</source>
+			</trans-unit>
+			<trans-unit id="form.not-logged-in">
+				<source><![CDATA[You are currently <strong>not</strong> logged in to Auth0.]]></source>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
