[TASK] Check for included TypoScript before BE login process

--- a/Resources/Private/Language/locallang_be.xlf
+++ b/Resources/Private/Language/locallang_be.xlf
@@ -24,14 +24,23 @@
 			<trans-unit id="form.login.auth0">
 				<source>Login to Auth0</source>
 			</trans-unit>
-			<trans-unit id="form.no-application">
-				<source>Please choose an application, which should be used for login to TYPO3.</source>
-			</trans-unit>
 			<trans-unit id="form.logged-in-as">
 				<source>You are currently logged in to Auth0 as:</source>
 			</trans-unit>
 			<trans-unit id="form.not-logged-in">
 				<source><![CDATA[You are currently <strong>not</strong> logged in to Auth0.]]></source>
+			</trans-unit>
+			<trans-unit id="form.error.no_application.title">
+				<source>No Application</source>
+			</trans-unit>
+			<trans-unit id="form.error.no_application.description">
+				<source>Please choose an application, which should be used for login to TYPO3.</source>
+			</trans-unit>
+			<trans-unit id="form.error.no_typoscript.title">
+				<source>No TypoScript</source>
+			</trans-unit>
+			<trans-unit id="form.error.no_typoscript.description">
+				<source>No settings for TYPO3 backend found. TypoScript included?</source>
 			</trans-unit>
 		</body>
 	</file>
