--- a/Resources/Private/Language/Database.xlf
+++ b/Resources/Private/Language/Database.xlf
@@ -10,6 +10,9 @@
 			<trans-unit id="tx_auth0_domain_model_frontenduser.auth0_metadata" xml:space="preserve">
 				<source>Auth0 Metadata</source>
 			</trans-unit>
+			<trans-unit id="tx_auth0_domain_model_frontenduser.auth0_last_application" xml:space="preserve">
+				<source>Last uses Auth0 application</source>
+			</trans-unit>
 			<trans-unit id="tx_auth0.tx_extbase_type" xml:space="preserve">
 				<source>Extbase Typ</source>
 			</trans-unit>
@@ -40,9 +43,6 @@
 			</trans-unit>
 			<trans-unit id="tx_auth0_domain_model_application.audience">
 				<source>Audience</source>
-			</trans-unit>
-			<trans-unit id="tx_auth0_domain_model_application.connections">
-				<source>Connections</source>
 			</trans-unit>
 
 			<trans-unit id="xxflexform.settings.title">
