--- a/Documentation/About/Changelog/1-0-0.rst
+++ b/Documentation/About/Changelog/1-0-0.rst
@@ -4,42 +4,13 @@
 Version 1.0.0 - 2018/12/18
 ==========================
 
-This release is a new major release, it was published almost three years after the migration from former EXT:naw_securedl to this
-extension. It introduces support for TYPO3 9 LTS as well as for PHP 7.2. TYPO3 7 LTS and PHP 5.x are not supported anymore.
+This is the initial release of this extension.
 
 Download
 ========
 
 Download this version from the `TYPO3 extension repository <https://extensions.typo3.org/extension/auth0/>`__ or from
 `GitHub <https://github.com/bitmotion/auth0-for-typo3/releases/tag/1.0.0>`__.
-
-Added
-=====
-
-* Support for TYPO3 v9
-* Support for PHP 7.2
-
-Changed
-=======
-
-* Respect :php:`$GLOBALS['TSFE']->absRefPrefix` when parsing HTML output
-* Renamed protected method :php:`\Bitmotion\SecureDownloads\Resource\FileDelivery::readfile_chunked` to :php:`readFileFactional`
-
-Deprecated
-==========
-
-* Member properties of :php:`\Bitmotion\SecureDownloads\Domain\Model\Log`:
-
-   * :php:`$bytesDownloaded`
-   * :php:`$typo3Mode`
-
-Removed
-=======
-
-* Support for TYPO3 v7
-* Support for PHP 5
-* Protected method :php:`\Bitmotion\SecureDownloads\Request\RequestContext::initializeBackendContext`
-* Protected member property :php:`\Bitmotion\SecureDownloads\Resource\FileDelivery::$logRowUid`
 
 All Changes
 ===========
