[FEATURE] Support custom domains

--- a/Documentation/About/Changelog/3-1-0.rst
+++ b/Documentation/About/Changelog/3-1-0.rst
@@ -20,6 +20,7 @@ Added
 * Dedicated license file
 * Frontend log in can be disabled
 * Documentation
+* Support for custom domains
 * Application record:
 
    * You can now choose a signature algorithm: `RS256` (default) or `HS256`
