[TASK] Mark convertAuth0UserToUserInfo method as deprecated

--- a/Documentation/About/Changelog/3-1-0.rst
+++ b/Documentation/About/Changelog/3-1-0.rst
@@ -51,6 +51,8 @@ Deprecated
    * :php:`getId()`
    * :php:`getSecret()`
 
+* :php:`\Bitmotion\Auth0\Utility\UserUtility::convertAuth0UserToUserInfo`
+
 Removed
 =======
 
