[FEATURE] Introduce generic callback for Auth0 requests
It is now possible to handle all Auth0 callbacks by using only a
single callback URI. Therefore, a new PSR-15 Middleware was
introduced. Besied of that, it is now possible to increase the
security of all your Auth0 related requests by using JSON Web
Tokens for transfering information. The token is signed with
TYPO3's encryption key by default. If you want to increase your
security even more, you can provide your own RSA key pair for
signing tokens.

--- a/Documentation/About/Changelog/3-1-0.rst
+++ b/Documentation/About/Changelog/3-1-0.rst
@@ -4,7 +4,9 @@
 Version 3.1.0 - 2020/03/11
 ==========================
 
-This is a future release. The release is planned for the first quarter of 2020.
+This release is feature release. It contains bug fixes and some new features. It is now possible to use Auth0's custom domains and
+handle base64 encoded client secrets. Also it is now possible to configure the used signature algorithm and to disable the
+frontend login.
 
 Download
 ========
